--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="./fonts/montserrat-medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="./fonts/montserrat-semibold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="./fonts/montserrat-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Интернет магазин: Drink2Go</title>
   </head>
@@ -67,109 +68,85 @@
     <main class="main-container">
       <h1 class="visually-hidden">Интернет магазин: Drink2Go.</h1>
       <section class="promo">
-        <div class="promo__wrapper">
-          <h2 class="visually-hidden">Новые товары</h2>
-          <div class="swiper">
-            <div class="swiper__wrapper swiper-wrapper">
-              <div class="swiper-slide">
+        <h2 class="visually-hidden">Новые товары</h2>
+        <div class="slider swiper">
+          <ul class="slider__list swiper-wrapper">
+            <li class="slider__item slider__item--decaf swiper-slide">
+              <div class="slider__item-wrapper">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-1-desktop@x1.webp 1x, ./img/new/new-1-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.webp 1x, ./img/new/new-1-tablet@x2.webp 2x" width="476" height="476">
                   <source type="image/webp" srcset="./img/new/new-1-mobile@x1.webp, ./img/new/new-1-mobile@x2.webp 2x" width="280" height="280">
                   <source media="(min-width: 1440px)" srcset="./img/new/new-1-desktop@x1.png 1x, ./img/new/new-1-desktop@x2.png 2x" width="600" height="600">
                   <source media="(min-width: 768px)" srcset="./img/new/new-1-tablet@x1.png 1x, ./img/new/new-1-tablet@x2.png 2x" width="476" height="476">
-                  <img class="swiper-slide__image" src="./img/new/new-1-mobile@x1.png" srcset="./img/new/new-1-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Декаф Флэт Уайт">
+                  <img class="slider__image" src="./img/new/new-1-mobile@x1.png" srcset="./img/new/new-1-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Декаф Флэт Уайт">
                 </picture>
-                <div class="swiper-slide__info-container">
-                  <span class="swiper-slide__badge badge">Новинка!</span>
-                  <h3 class="swiper-slide__header">Декаф Флэт Уайт</h3>
-                  <p class="swiper-slide__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-                  <div class="swiper-slide__buttom-container">
-                    <div class="swiper-slide__price-container">
-                      <del class="swiper-slide__old-price">295₽</del>
-                      <b class="swiper-slide__price">225₽</b>
+                <div class="slider__info-container">
+                  <span class="slider__badge badge">Новинка!</span>
+                  <h3 class="slider__header">Декаф Флэт Уайт</h3>
+                  <p class="slider__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+                  <div class="slider__buttom-container">
+                    <div class="slider__price-container">
+                      <del class="slider__old-price">295₽</del>
+                      <b class="slider__price">225₽</b>
                     </div>
-                    <a class="swiper-slide__button button" href="#!">Заказать</a>
+                    <a class="slider__button button" href="#!">Заказать</a>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide visually-hidden">
+            </li>
+            <li class="slider__item slider__item--latte swiper-slide">
+              <div class="slider__item-wrapper">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-2-desktop@x1.webp 1x, ./img/new/new-2-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.webp 1x, ./img/new/new-2-tablet@x2.webp 2x" width="476" height="476">
                   <source type="image/webp" srcset="./img/new/new-2-mobile@x1.webp, ./img/new/new-2-mobile@x2.webp 2x" width="280" height="280">
                   <source media="(min-width: 1440px)" srcset="./img/new/new-2-desktop@x1.png 1x, ./img/new/new-2-desktop@x2.png 2x" width="600" height="600">
                   <source media="(min-width: 768px)" srcset="./img/new/new-2-tablet@x1.png 1x, ./img/new/new-2-tablet@x2.png 2x" width="476" height="476">
-                  <img class="swiper-slide__image" src="./img/new/new-2-mobile@x1.png" srcset="./img/new/new-2-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Лавандовый Латте">
+                  <img class="slider__image" src="./img/new/new-2-mobile@x1.png" srcset="./img/new/new-2-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Лавандовый Латте">
                 </picture>
-                <div class="swiper-slide__info-container">
-                  <span class="swiper-slide__badge badge">Новинка!</span>
-                  <h3 class="swiper-slide__header">Лавандовый Латте</h3>
-                  <p class="swiper-slide__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
-                  <div class="swiper-slide__buttom-container">
-                    <div class="swiper-slide__price-container">
-                      <del class="swiper-slide__old-price">285₽</del>
-                      <b class="swiper-slide__price">265₽</b>
+                <div class="slider__info-container">
+                  <span class="slider__badge badge">Новинка!</span>
+                  <h3 class="slider__header">Лавандовый Латте</h3>
+                  <p class="slider__text">Невероятное сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор</p>
+                  <div class="slider__buttom-container">
+                    <div class="slider__price-container">
+                      <del class="slider__old-price">285₽</del>
+                      <b class="slider__price">265₽</b>
                     </div>
-                    <a class="swiper-slide__button button" href="#!">Заказать</a>
+                    <a class="slider__button button" href="#!">Заказать</a>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide visually-hidden">
+            </li>
+            <li class="slider__item slider__item--triple swiper-slide">
+              <div class="slider__item-wrapper">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)" srcset="./img/new/new-3-desktop@x1.webp 1x, ./img/new/new-3-desktop@x2.webp 2x" width="600" height="600">
                   <source type="image/webp" media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.webp 1x, ./img/new/new-3-tablet@x2.webp 2x" width="476" height="476">
                   <source type="image/webp" srcset="./img/new/new-3-mobile@x1.webp, ./img/new/new-3-mobile@x2.webp 2x" width="280" height="280">
                   <source media="(min-width: 1440px)" srcset="./img/new/new-3-desktop@x1.png 1x, ./img/new/new-3-desktop@x2.png 2x" width="600" height="600">
                   <source media="(min-width: 768px)" srcset="./img/new/new-3-tablet@x1.png 1x, ./img/new/new-3-tablet@x2.png 2x" width="476" height="476">
-                  <img class="swiper-slide__image" src="./img/new/new-3-mobile@x1.png" srcset="./img/new/new-3-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Тройной Эспрессо">
+                  <img class="slider__image" src="./img/new/new-3-mobile@x1.png" srcset="./img/new/new-3-mobile@x2.png 2x" width="280" height="280" alt="Кофейный напиток Тройной Эспрессо">
                 </picture>
-                <div class="swiper-slide__info-container">
-                  <span class="swiper-slide__badge badge">Новинка!</span>
-                  <h3 class="swiper-slide__header">Тройной Эспрессо</h3>
-                  <p class="swiper-slide__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
-                  <div class="swiper-slide__buttom-container">
-                    <div class="swiper-slide__price-container">
-                      <del class="swiper-slide__old-price">395₽</del>
-                      <b class="swiper-slide__price">375₽</b>
+                <div class="slider__info-container">
+                  <span class="slider__badge badge">Новинка!</span>
+                  <h3 class="slider__header">Тройной Эспрессо</h3>
+                  <p class="slider__text">Мощнее укола адреналина, чернее самой тёмной ночи, этот тройной эспрессо из Колумбии покажет вам, что такое настоящая бодрость</p>
+                  <div class="slider__buttom-container">
+                    <div class="slider__price-container">
+                      <del class="slider__old-price">395₽</del>
+                      <b class="slider__price">375₽</b>
                     </div>
-                    <a class="swiper-slide__button button" href="#!">Заказать</a>
+                    <a class="slider__button button" href="#!">Заказать</a>
                   </div>
                 </div>
               </div>
-              <button class="swiper-button swiper-button-prev" type="button">
-                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-arrow" />
-                </svg>
-                <span class="visually-hidden">Предыдущий слайд.</span>
-              </button>
-              <button class="swiper-button swiper-button--secondary swiper-button-next" type="button">
-                <svg class="swiper-button__icon" width="11" height="20" aria-hidden="true" focusable="false">
-                  <use xlink:href="./img/icons/stack.svg#icon-arrow" />
-                </svg>
-                <span class="visually-hidden">Следующий слайд.</span>
-              </button>
-              <div class="swiper-pagination">
-                <ol class="swiper-pagination__list">
-                  <li class="swiper-pagination__item">
-                    <button class="swiper-pagination__button swiper-pagination__button--current" type="button">
-                      <span class="visually-hidden">1 слайд.</span>
-                    </button>
-                  </li>
-                  <li class="swiper-pagination__item">
-                    <button class="swiper-pagination__button" type="button">
-                      <span class="visually-hidden">2 слайд.</span>
-                    </button>
-                  </li>
-                  <li class="swiper-pagination__item">
-                    <button class="swiper-pagination__button" type="button">
-                      <span class="visually-hidden">3 слайд.</span>
-                    </button>
-                  </li>
-                </ol>
-              </div>
-            </div>
-          </div>
+            </li>
+          </ul>
+          <div class="slider__slider-button slider-button slider-button--prev swiper-button-prev"></div>
+          <div class="slider__slider-button slider-button slider-button--next swiper-button-next"></div>
+          <div class="slider__slider-pagination slider-pagination swiper-pagination"></div>
         </div>
       </section>
       <section class="features">
@@ -571,7 +548,7 @@
         </section>
       </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/script.js" defer></script>
   </body>
 
